Bug 87548 - Numbering in the first column of writer table
Summary: Numbering in the first column of writer table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.0.0 target:4.3.7 target:4.4.3
Keywords: bibisected, bisected, regression
: 84041 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-21 07:30 UTC by andis.lazdins
Modified: 2015-12-17 08:42 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Wrong way of numbering in the first column in writer table (10.21 KB, application/vnd.oasis.opendocument.text)
2014-12-21 07:30 UTC, andis.lazdins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2014-12-21 07:30:19 UTC
Created attachment 111103 [details]
Wrong way of numbering in the first column in writer table

The problem is the same numbers in all rows of the table, if numbering is switched on in the first column of the table. Steps to repeat:
1. create writer document
2. create table with 2 or more columns in this document
3. select first column of the table
4. switch on numbering

Result - all rows have the same number - 1, like in attachment; normally all rows should have different numbers.

Simple workaround (starting from step 3):
1. select 2 columns at the beginning of table
2. switch on numbering
3. delete first column

Result - table with the first column with normal numbering.

Ubuntu 14.04 32 bit, Libreoffice 4.3.5.2
Comment 1 andis.lazdins 2014-12-21 07:33:12 UTC
Mistake in workaround!!!

Simple workaround (starting from step 3):
1. select first column at the beginning of table
2. switch on numbering
3. select second column at the beginning of the table
4. switch on numbering
5. delete first column

Result - table with the first column with normal numbering.
Comment 2 A (Andy) 2014-12-21 08:15:21 UTC
Reproducible with LO 4.4.0.0.beta1 and 4.3.4.1 (Win 8.1).
Comment 3 Cor Nouws 2014-12-21 13:13:58 UTC
first version with problem that I have is 430alpha1
Comment 4 Michael Weghorn 2015-01-10 18:14:00 UTC
bibisect result:

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [752769ad0d2179e17ea0a08cc9004df7b890305b] source-hash-60c64b437c6678dd1d3fa3a6fc2b7da0480890d4
git bisect start 'latest' 'last42onmaster'
# good: [4fcd68ce4979f85fda4568f4b419a4b41d07345f] source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
git bisect good 4fcd68ce4979f85fda4568f4b419a4b41d07345f
# skip: [422186458e0b4db00c7e26b54d5b631f83bcad2a] source-hash-6948bf58ce181b17f60ef81f10205ef4dac50cc6
git bisect skip 422186458e0b4db00c7e26b54d5b631f83bcad2a
# bad: [a0b33bffff9c787dce71a13b344f06ae1453026b] source-hash-02e0be069e57e724c51f23e2e31b77657a6a1d3d
git bisect bad a0b33bffff9c787dce71a13b344f06ae1453026b
# good: [db29eee512d03b1dc0139b3752bbe7931b165377] source-hash-77b6c1602aaa0bd059077765e7fabb53d9e6ddeb
git bisect good db29eee512d03b1dc0139b3752bbe7931b165377
# bad: [9d57c189d74551d2b3770cc81139ea10a62e672f] source-hash-5b5e62650354788e50b44f32c22b687b2018aba9
git bisect bad 9d57c189d74551d2b3770cc81139ea10a62e672f
# bad: [54cb1e734a8a8afb71a38fb1ff0f61103af44147] source-hash-1b922da415339726fb0186246dba6a03429b33bf
git bisect bad 54cb1e734a8a8afb71a38fb1ff0f61103af44147
# bad: [13f22e75712a128951aeed518ac4e60174c5ed69] source-hash-306859babd5a997a1e5d50e7791e8e5852a7ea2e
git bisect bad 13f22e75712a128951aeed518ac4e60174c5ed69
# bad: [ce81582766413e76a63c047bfd6227ab12fcd866] source-hash-3d1b1eea83703919c43620f9adef05e5b24c4bed
git bisect bad ce81582766413e76a63c047bfd6227ab12fcd866
# good: [e34eadbaf87d8e71ebd9cf34e6acc628ad0b4650] source-hash-7b56d303300fbf592473b28b654fd22fec110962
git bisect good e34eadbaf87d8e71ebd9cf34e6acc628ad0b4650
# first bad commit: [ce81582766413e76a63c047bfd6227ab12fcd866] source-hash-3d1b1eea83703919c43620f9adef05e5b24c4bed
Comment 5 Joel Madero 2015-01-10 19:52:28 UTC
Caolan -

I think this is related to a cherry pick that you committed. 

See: http://cgit.freedesktop.org/libreoffice/core/commit/?id=04187aaf09969341a7ae9ae7ff5a13925381a96b

Thoughts?
Comment 6 Commit Notification 2015-04-03 11:53:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db41e274747e6f1d3eee2bd5efb3321cfcbd6b75

Resolves: tdf#87548 don't create a new list for each multiselection portion

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2015-04-03 12:24:27 UTC
*** Bug 84041 has been marked as a duplicate of this bug. ***
Comment 8 Timur 2015-04-03 14:53:59 UTC
Thank you for writing about the possibility of backporting to 4.3. and 4.4.
Comment 9 Caolán McNamara 2015-04-03 15:39:41 UTC
in review queue for 4-4 and 4-3 as
https://gerrit.libreoffice.org/15139
https://gerrit.libreoffice.org/15138
Comment 10 Commit Notification 2015-04-08 14:39:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c51365d7062d5aaa5b6e0f6e7c7fbfd2a9ebda6&h=libreoffice-4-3

Resolves: tdf#87548 don't create a new list for each multiselection portion

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2015-04-09 12:39:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9ed8781e66dd430b746c8fb66f321567b7bfe53&h=libreoffice-4-4

Resolves: tdf#87548 don't create a new list for each multiselection portion

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Michael Kůr 2015-04-09 12:52:31 UTC
Yes, the bug is fixed on 4.5.0.0.alpha0
Comment 13 andis.lazdins 2015-04-11 07:54:07 UTC
It is solved to me in 4.3.7.1, Ubuntu 14.04, 32 bit.

Thank you a lot!
Comment 14 Norbert X 2015-04-13 10:26:44 UTC
Bug exists in Version: 4.4.2.2
Build ID: 40m0(Build:2)
Locale: en_US
from LibreOffice PPA on Ubuntu 12.04.5 (1:4.4.2~rc2-0ubuntu1~precise1).

Please fix it.
Comment 15 David Tardon 2015-04-13 10:35:40 UTC
(In reply to Norbert X from comment #14)
> Bug exists in Version: 4.4.2.2

The target status clearly says it will be fixed in 4.4._3_.
Comment 16 Robinson Tryon (qubit) 2015-12-17 08:42:15 UTC Comment hidden (obsolete)