Resolves: tdf#87548 don't create a new list for each multiselection portion

create one list and share it among all the subsections

possibly a regression from/triggered by

 author	Oliver-Rainer Wittmann <orw@apache.org>	2014-03-18 14:33:39 (GMT)

 Resolves: #i124371# When changing the numbering or bullet styling...  of a set
 of paragraph which have more than one different List Style applied create a new
 List Style and put the paragraphs into a new list.

 (cherry picked from commit 0087ca89e3905009ed947c651f3dc70f3d61ea93)

Change-Id: I9416b97d6afe323ac99150fdcc23f71ecea98a58