sw/source/core/doc/docnum.cxx
@@ -816,13 +816,15 @@ static void lcl_ChgNumRule( SwDoc& rDoc, const SwNumRule& rRule )
     rDoc.UpdateNumRule();
 }
 
-void SwDoc::SetNumRule( const SwPaM& rPam,
+OUString SwDoc::SetNumRule( const SwPaM& rPam,
                         const SwNumRule& rRule,
                         const bool bCreateNewList,
                         const OUString& sContinuedListId,
                         bool bSetItem,
                         const bool bResetIndentAttrs )
 {
+    OUString sListId;
+
     SwUndoInsNum * pUndo = NULL;
     if (GetIDocumentUndoRedo().DoesUndo())
     {
@@ -856,7 +858,6 @@ void SwDoc::SetNumRule( const SwPaM& rPam,
 
     if ( bSetItem )
     {
-        OUString sListId;
         if ( bCreateNewList )
         {
             if ( bNewNumRuleCreated )
@@ -935,8 +936,9 @@ void SwDoc::SetNumRule( const SwPaM& rPam,
     }
 
     getIDocumentState().SetModified();
-}
 
+    return sListId;
+}
 
 void SwDoc::SetCounted(const SwPaM & rPam, bool bCounted)
 {
